# ai-data-ready-platform

./: .gitignore  README.md  pyproject.toml
.omx/plans/: cleanrag-mvp-execution-plan.md
docs/: ACCEPTANCE_REPORT_TEMPLATE.md  AI Data Readiness Platform 可扩展与优化分析.md  ARCHITECTURE.md  DATASET_CARD_TEMPLATE.md  DOCUMENT_IR.md  PRD-CleanRAG-MVP.md  QUALITY_SCORE_MODEL.md  RAG_EVALUATION_PLAN.md  RISK_REMEDIATION.md  ROADMAP.md  RULE_ENGINE_SPEC.md
scripts/: paddleocr_pdf_bridge.py  paddleocr_windowed_pdf_bridge.py
src/cleanrag/: __init__.py  allowlist.py  chunker.py  cli.py  models.py  parsers.py  pdf_adapters.py  pipeline.py  reports.py  review.py  rules.py  scoring.py  storage.py
tests/: test_adapter_output.py  test_allowlist.py  test_opendataloader_adapter.py  test_paddleocr_windowed_bridge.py  test_pdf_adapter.py  test_pipeline.py  test_scoring_risks.py
tests/fixtures/input/: sample.html  sample.md
