[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cleanrag"
version = "0.1.0"
description = "RAG document dataset readiness CLI prototype"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
opendataloader = ["opendataloader-pdf", "pymupdf"]
docling = ["docling"]
unstructured = ["unstructured[pdf]"]
ocr = ["textract", "paddleocr", "paddlepaddle"]
all-pdf = ["opendataloader-pdf", "pymupdf", "docling", "unstructured[pdf]", "textract", "paddleocr", "paddlepaddle"]

[project.scripts]
cleanrag = "cleanrag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
